코드 수정 및 각종 기능 추가

--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,13 @@
     </ul>
   </nav>
 </header>
+
+<!-- 홈버튼 -->
 <a href ="index.html">
   <i class="fas fa-home fa-2x"></i>
 </a>
 
+<!-- 연락처 -->
   <main id="contact">
     <h1 class="lg-heading">
       연락을 기다립니다.
@@ -79,7 +82,7 @@
   </main>
 
   <footer id="main-footer">
-    &copy; Copyright YuYangWoo
+    &copy; Made by YuYangWoo
   </footer>
 
   <script src="js/main.js"></script>
