--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
 <body id="bg-img">
   <header>
+    <!-- 네비게이션 바 -->
     <div class="menu-btn">
       <div class="btn-line"></div>
       <div class="btn-line"></div>
       <div class="btn-line"></div>
     </div>
-
+<!-- 네비게이션 바 내용 -->
     <nav class="menu">
       <div class="menu-branding">
         <div class="portrait"></div>
@@ -55,15 +56,14 @@
       </ul>
     </nav>
   </header>
-  
+  <!-- 홈 버튼 -->
   <a href ="index.html">
     <i class="fas fa-home fa-2x"></i>
   </a>
-
+<!-- 자기소개 및 SNS -->
   <main id="home">
     <h1 class="lg-heading">
-      Yu
-      <span class="text-secondary">YangWoo</span>
+      <span class="text-secondary"> YuYangWoo</span>
     </h1>
     <h2 class="sm-heading">
       Android Developer, Programmer
