--- a/project.html
+++ b/project.html
@@ -54,9 +54,12 @@
       </ul>
     </nav>
   </header>
+
+  <!-- 홈버튼 -->
   <a href ="index.html">
     <i class="fas fa-home fa-2x"></i>
-  </a>
+  </a> 
+
   <main id="work">
     <h1 class="lg-heading">
       나의 프로젝트
@@ -64,9 +67,11 @@
     <h2 class="sm-heading">
     저의 프로젝트를 확인해보세요
     </h2>
+
+    <!-- 프로젝트 -->
     <div class="projects">
       <div class="item">
-        <a href="#!">
+        <a href="https://github.com/YuYangWoo/StoneAgeDictonary" target="blank">
           <img src="img/projects/project1.gif" alt="Project">
         </a>
         <div class="btn-light">
@@ -77,7 +82,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://github.com/YuYangWoo/SimpleGameProject" target="blank">
           <img src="img/projects/project2.gif" alt="Project">
         </a>
         <div class="btn-light">
@@ -88,7 +93,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://github.com/YuYangWoo/InvasionProject" target="blank">
           <img src="img/projects/project3.gif" alt="Project">
         </a>
         <div class="btn-light">
@@ -99,7 +104,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://github.com/YuYangWoo/Davinchi" target="blank">
           <img src="img/projects/project4.gif" alt="Project">
         </a>
         <div class="btn-light">
@@ -110,7 +115,7 @@
         </a>
       </div>
       <div class="item">
-        <a href="#!">
+        <a href="https://github.com/YuYangWoo/to-do-list" target="blank">
           <img src="img/projects/project5.jpg" alt="Project">
         </a>
         <div class="btn-light">
@@ -124,7 +129,7 @@
   </main>
 
   <footer id="main-footer">
-   &copy; Copyright YuYangWoo
+   Made by YuYangWoo
   </footer>
 
   <script src="js/main.js"></script>
