--- a/profile.html
+++ b/profile.html
@@ -54,7 +54,7 @@
       </ul>
     </nav>
   </header>
-
+<!-- 홈 버튼 -->
   <a href ="index.html">
     <i class="fas fa-home fa-2x"></i>
   </a>
@@ -70,13 +70,20 @@
       <img src="img/portrait.jpg" alt="YuYangWoo" class="bio-image">
 
       <div class="bio">
+        <h3 class="text-secondary">학력</h3>
+        <p>2010.03 ~ 2013.02 태성중학교 졸업<br>
+          2013.03 ~ 2016.02 태성고등학교(이과) 졸업<br>
+          2016.03~ 가천대학교(컴퓨터공학과) 입학<br>
+        </p>
         <h3 class="text-secondary">자기소개</h3>
         <p>안녕하세요. 저는 현재 가천대학교 3학년 2학기에 재학중인 유양우라고 합니다. <br>평소에 안드로이드 개발을 좋아합니다.<br>현재 안드로이드 앱을 Google Play 스토어에
-        출시도 하였습니다.<br>다른 분야에도 넓은 도전을 해보고 싶습니다.<br>아래는 제가 하고 싶은 일을 정리해봤습니다.</p>
+        출시도 하였습니다. <a href="https://play.google.com/store/apps/details?id=com.cookandroid.stoneagedc" class = "text-third"target="blank">(보기)</a><br>다른 분야에도 넓은 도전을 해보고 싶습니다.<br>아래는 제가 하고 싶은 일을 정리해봤습니다.</p>
       </div>
+    
 
       <div class="job job-1">
         <h3>안드로이드 개발자</h3>
+        <h4>Kotlin + Android + Spring Boot</h4>
         <h5>Full Stack Developer</h5>
         <p>저는 코틀린 언어를 사용해 안드로이드 App을 개발합니다. 현재 대중적인 컴포넌트들은 다 사용할 줄 알며 MVVM패턴을 사용해 효과적으로 개발을 하고 있습니다.
           <br>안드로이드는 프론트 뿐만아니라 백엔드 쪽도 이해력이 있어야 한다고 생각합니다. 저는 그런 개발자가 될 준비를 하였고 준비가 되어 있습니다.
@@ -85,6 +92,7 @@
 
       <div class="job job-2">
         <h3>서버 개발자</h3>
+        <h4>node.js + Spring Boot</h4>
         <h5>BackEnd Developer</h5>
         <p>패션에도 트랜드가 있듯이 개발에도 트랜드가 있다고 생각합니다. 지금 서버에서의 트랜드는 바로 Node.js가 아닐까 생각합니다. 그 이유는 모두가 손쉽게
           사용 할 수 있으며 웹이든 앱이든 어디서 사용할 수 있기 때문입니다. 저 역시 이걸 알고 모든 프로젝트를 Node.js를 사용해 프로젝트를 해왔습니다. 
@@ -97,7 +105,7 @@
   </main>
 
   <footer id="main-footer">
-    &copy; Copyright YuYangWoo
+   Made by YuYangWoo
   </footer>
 
   <script src="js/main.js"></script>
