--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
   </main>
 
   <footer id="main-footer">
-    &copy; Made by YuYangWoo
+     Made by YuYangWoo
   </footer>
 
   <script src="js/main.js"></script>
