--- a/index.html
+++ b/index.html
@@ -68,11 +68,9 @@
     <h2 class="sm-heading">
       Android Developer, Programmer
     </h2>
-
+<!-- icon들에 링크 연결-->
     <div class="icons" >
       <div class="btn-block" >
-       
-     
       <a href="https://www.facebook.com/profile.php?id=100004357323605" target="blank">
         <i class="fab fa-facebook fa-2x"></i>
       </a>
