--- a/project.html
+++ b/project.html
@@ -103,6 +103,17 @@
           <i class="fab fa-github"></i> Github
         </a>
       </div>
+          <div class="item">
+        <a href="https://github.com/YuYangWoo/WildRift" target="blank">
+          <img src="img/projects/project6.gif" alt="Project">
+        </a>
+        <div class="btn-light">
+          <i class="fas fa-eye"></i>와일드리프트 백과사전
+        </div>
+        <a href="https://github.com/YuYangWoo/WildRift" class="btn-dark" target="blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
       <div class="item">
         <a href="https://github.com/YuYangWoo/Davinchi" target="blank">
           <img src="img/projects/project4.gif" alt="Project">
