개인정보 삭제

--- a/contact.html
+++ b/contact.html
@@ -73,10 +73,10 @@
         <span class="text-secondary">Email: </span> yuyw0712@naver.com
       </div>
       <div>
-        <span class="text-secondary">Phone: </span> 010-2638-1453
+        <span class="text-secondary">Phone: </span> xxx
       </div>
       <div>
-        <span class="text-secondary">Address: </span> 경기도 성남시 수정구 복정로20번길10 102호
+        <span class="text-secondary">Address: </span> xxx
       </div>
     </div>
   </main>
