거리두기 행동지침프로젝트 추가

--- a/project.html
+++ b/project.html
@@ -115,6 +115,17 @@
         </a>
       </div>
       <div class="item">
+        <a href="https://github.com/YuYangWoo/HongKaThon" target="blank">
+          <img src="img/projects/project7.gif" alt="Project">
+        </a>
+        <div class="btn-light">
+          <i class="fas fa-eye"></i>거리두기 행동지침
+        </div>
+        <a href="https://github.com/YuYangWoo/HongKaThon" class="btn-dark" target="blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
+      <div class="item">
         <a href="https://github.com/YuYangWoo/Davinchi" target="blank">
           <img src="img/projects/project4.gif" alt="Project">
         </a>
