프로필 변경 및 index.html 이름 크기 수정

--- a/profile.html
+++ b/profile.html
@@ -64,7 +64,7 @@
      프로필
     </h1>
     <h2 class="sm-heading">
-     저를 소개합니다
+      안녕하세요. Android Native 개발자 유양우입니다.
     </h2>
     <div class="about-info">
       <img src="img/portrait.jpg" alt="YuYangWoo" class="bio-image">
@@ -77,38 +77,34 @@
           2021.03~ 가온소프트 Android 개발
         </p>
         <h3 class="text-secondary">자기소개</h3>
-        <p>안녕하세요. Android Native 개발자 유양우입니다. <br>스톤에이지 모바일 백과사전을 만들면서 모바일 프로그래밍에 관심을 가졌습니다.<a href="https://play.google.com/store/apps/details?id=com.cookandroid.stoneagedc" class = "text-third"target="blank">(보기)</a>
-          </p>
+        <p>개발은 꾸준함과 도전정신이라고 생각합니다. 저는 끈기를 가지고 여러가지 앱을 개발했으며 사용자 입장에서 앱을 개발하기 때문에 서비스는 사용자와 끈임없는 대화임을 알고 있습니다.<br>
+          저는 Android 개발자이며 스톤에이지 모바일 백과사전을 만들면서 모바일 프로그래밍에 관심을 가졌습니다.<a href="https://play.google.com/store/apps/details?id=com.cookandroid.stoneagedc" class = "text-third"target="blank">(보기)</a>
+          <br>
+        </p>
           <h3 class="text-secondary">Stack</h3>
-          <p>· Kotlin<br>
+          <p>· Android<br>
+            · Kotlin<br>
             · JAVA<br>
-            · Android<br>
-            · git<br>
+            · Git<br>
             · C++<br>
             · C<br>
             </p>
       </div>
-    
-
+  
       <div class="job job-1">
-        <h3>안드로이드 개발자</h3>
-        <h4>보유스킬</h4>
-        <h5>Full Stack Developer</h5>
-        <p>저는 코틀린 언어를 사용해 안드로이드 App을 개발합니다. 현재 대중적인 컴포넌트들은 다 사용할 줄 알며 MVVM패턴을 사용해 효과적으로 개발을 하고 있습니다.
-          <br>안드로이드는 프론트 뿐만아니라 백엔드 쪽도 이해력이 있어야 한다고 생각합니다. 저는 그런 개발자가 될 준비를 하였고 준비가 되어 있습니다.
+        <h2>안드로이드 개발자</h2>
+        <h3>보유스킬</h3>
+        <p>· Android JetPack 활용<br>
+          · Android Architecture Component 활용<br>
+          · Kotlin 활용<br>
+          · MVVM 디자인 패턴 적용<br>
+          · 다양한 Library, API, SDK활용 경험<br>
+          · 동기·비동기 코드의 유연한 처리(Coroutine)<br>
+          · 최신 기술에 발빠르게 적응하고 새로운 기술을 습득<br>
+          · Android UI를 자율스럽게 Custom해 사용<br>
+          · 안드로이드 4대 컴포넌트 활용 능력<br>
         </p>
       </div>
-
-      <div class="job job-2">
-        <h3>서버 개발자</h3>
-        <h4>node.js + Spring Boot</h4>
-        <h5>BackEnd Developer</h5>
-        <p>패션에도 트랜드가 있듯이 개발에도 트랜드가 있다고 생각합니다. 지금 서버에서의 트랜드는 바로 Node.js가 아닐까 생각합니다. 그 이유는 모두가 손쉽게
-          사용 할 수 있으며 웹이든 앱이든 어디서 사용할 수 있기 때문입니다. 저 역시 이걸 알고 모든 프로젝트를 Node.js를 사용해 프로젝트를 해왔습니다. 
-          눈에 보이지 않지만 중요한 역할이 서버라고 생각합니다. 저는 꿋꿋하게 모니터 너머 속에서 일하겠습니다.
-        </p>
-      </div>
-    </div>
     
   </main>
 
