열람실 프로젝트 추가

--- a/project.html
+++ b/project.html
@@ -70,50 +70,19 @@
 
     <!-- 프로젝트 -->
     <div class="projects">
+
       <div class="item">
-        <a href="https://github.com/YuYangWoo/StoneAgeDictonary" target="blank">
-          <img src="img/projects/project1.gif" alt="Project">
+        <a href="https://github.com/YuYangWoo/Gachon_Room" target="blank">
+          <img src="img/projects/project8.gif" alt="Project">
         </a>
         <div class="btn-light">
-          <i class="fas fa-eye"></i>스톤에이지 프로젝트
+          <i class="fas fa-eye"></i>가천대학교 열람실
         </div>
-        <a href="https://github.com/YuYangWoo/StoneAgeDictonary" class="btn-dark" target="blank">
-          <i class="fab fa-github"></i>Github
-        </a>
-      </div>
-      <div class="item">
-        <a href="https://github.com/YuYangWoo/SimpleGameProject" target="blank">
-          <img src="img/projects/project2.gif" alt="Project">
-        </a>
-        <div class="btn-light">
-          <i class="fas fa-eye"></i>해커톤 게임 프로젝트
-        </div>
-        <a href="https://github.com/YuYangWoo/SimpleGameProject" class="btn-dark" target="blank">
+        <a href="https://github.com/YuYangWoo/Gachon_Room" class="btn-dark" target="blank">
           <i class="fab fa-github"></i> Github
         </a>
       </div>
-      <div class="item">
-        <a href="https://github.com/YuYangWoo/InvasionProject" target="blank">
-          <img src="img/projects/project3.gif" alt="Project">
-        </a>
-        <div class="btn-light">
-          <i class="fas fa-eye"></i>침입탐지 시스템
-        </div>
-        <a href="https://github.com/YuYangWoo/InvasionProject" class="btn-dark" target="blank">
-          <i class="fab fa-github"></i> Github
-        </a>
-      </div>
-          <div class="item">
-        <a href="https://github.com/YuYangWoo/WildRift" target="blank">
-          <img src="img/projects/project6.gif" alt="Project">
-        </a>
-        <div class="btn-light">
-          <i class="fas fa-eye"></i>와일드리프트 백과사전
-        </div>
-        <a href="https://github.com/YuYangWoo/WildRift" class="btn-dark" target="blank">
-          <i class="fab fa-github"></i> Github
-        </a>
-      </div>
+
       <div class="item">
         <a href="https://github.com/YuYangWoo/HongKaThon" target="blank">
           <img src="img/projects/project7.gif" alt="Project">
@@ -125,6 +94,55 @@
           <i class="fab fa-github"></i> Github
         </a>
       </div>
+
+      <div class="item">
+        <a href="https://github.com/YuYangWoo/WildRift" target="blank">
+          <img src="img/projects/project6.gif" alt="Project">
+        </a>
+        <div class="btn-light">
+          <i class="fas fa-eye"></i>와일드리프트 백과사전
+        </div>
+        <a href="https://github.com/YuYangWoo/WildRift" class="btn-dark" target="blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="https://github.com/YuYangWoo/InvasionProject" target="blank">
+          <img src="img/projects/project3.gif" alt="Project">
+        </a>
+        <div class="btn-light">
+          <i class="fas fa-eye"></i>침입탐지 시스템
+        </div>
+        <a href="https://github.com/YuYangWoo/InvasionProject" class="btn-dark" target="blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="https://github.com/YuYangWoo/SimpleGameProject" target="blank">
+          <img src="img/projects/project2.gif" alt="Project">
+        </a>
+        <div class="btn-light">
+          <i class="fas fa-eye"></i>해커톤 게임 프로젝트
+        </div>
+        <a href="https://github.com/YuYangWoo/SimpleGameProject" class="btn-dark" target="blank">
+          <i class="fab fa-github"></i> Github
+        </a>
+      </div>
+
+      <div class="item">
+        <a href="https://github.com/YuYangWoo/StoneAgeDictonary" target="blank">
+          <img src="img/projects/project1.gif" alt="Project">
+        </a>
+        <div class="btn-light">
+          <i class="fas fa-eye"></i>스톤에이지 프로젝트
+        </div>
+        <a href="https://github.com/YuYangWoo/StoneAgeDictonary" class="btn-dark" target="blank">
+          <i class="fab fa-github"></i>Github
+        </a>
+      </div>
+
       <div class="item">
         <a href="https://github.com/YuYangWoo/Davinchi" target="blank">
           <img src="img/projects/project4.gif" alt="Project">
@@ -136,6 +154,7 @@
           <i class="fab fa-github"></i> Github
         </a>
       </div>
+
       <div class="item">
         <a href="https://github.com/YuYangWoo/to-do-list" target="blank">
           <img src="img/projects/project5.jpg" alt="Project">
@@ -147,6 +166,7 @@
           <i class="fab fa-github"></i> Github
         </a>
       </div>
+
     </div>
   </main>
 
